--- a/src/app/features/workspace/components/header-workspace/header-workspace.component.scss
+++ b/src/app/features/workspace/components/header-workspace/header-workspace.component.scss
@@ -6,7 +6,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
   gap: 16px;
   padding-left: 30px;
 }
