--- a/src/app/shared/components/message-bubble-component/message-bubble.component.scss
+++ b/src/app/shared/components/message-bubble-component/message-bubble.component.scss
@@ -12,7 +12,7 @@
   gap: 20px;
   width: 100%;
   max-width: 100%;
-  padding-left: 24px;
+  padding-left: 48px;
   padding-top: 15px;
   padding-bottom: 15px;
   box-sizing: border-box;
